deploy: d5c382666b4f89a39879dc5c964f3e04fa85be18

--- a/execution_time.html
+++ b/execution_time.html
@@ -572,93 +572,93 @@ document.write(`
 </thead>
 <tbody>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="core/fine-tuning/fine-tuning-oxides.html"><span class="doc">core/fine-tuning/fine-tuning-oxides</span></a></p></td>
-<td><p>2024-04-15 13:48</p></td>
+<td><p>2024-04-15 17:17</p></td>
 <td><p>cache</p></td>
-<td><p>185.7</p></td>
-<td><p>✅</p></td>
+<td><p>1288.64</p></td>
+<td><p><abbr title="CellTimeoutError">❌</abbr></p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="core/gotchas.html"><span class="doc">core/gotchas</span></a></p></td>
-<td><p>2024-04-15 13:49</p></td>
+<td><p>2024-04-15 17:18</p></td>
 <td><p>cache</p></td>
-<td><p>35.36</p></td>
+<td><p>35.68</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="core/inference.html"><span class="doc">core/inference</span></a></p></td>
-<td><p>2024-04-15 13:49</p></td>
+<td><p>2024-04-15 17:18</p></td>
 <td><p>cache</p></td>
-<td><p>4.3</p></td>
+<td><p>15.2</p></td>
 <td><p><abbr title="CellExecutionError">❌</abbr></p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="core/lmdb_dataset_creation.html"><span class="doc">core/lmdb_dataset_creation</span></a></p></td>
-<td><p>2024-04-15 13:49</p></td>
+<td><p>2024-04-15 17:18</p></td>
 <td><p>cache</p></td>
-<td><p>19.53</p></td>
+<td><p>19.71</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="core/ocpapi.html"><span class="doc">core/ocpapi</span></a></p></td>
-<td><p>2024-04-15 13:58</p></td>
+<td><p>2024-04-15 17:27</p></td>
 <td><p>cache</p></td>
-<td><p>523.84</p></td>
+<td><p>529.98</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="core/quickstart.html"><span class="doc">core/quickstart</span></a></p></td>
-<td><p>2024-04-15 13:58</p></td>
+<td><p>2024-04-15 17:27</p></td>
 <td><p>cache</p></td>
-<td><p>16.07</p></td>
+<td><p>16.89</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="legacy_tutorials/OCP_Tutorial.html"><span class="doc">legacy_tutorials/OCP_Tutorial</span></a></p></td>
-<td><p>2024-04-15 14:13</p></td>
+<td><p>2024-04-15 17:42</p></td>
 <td><p>cache</p></td>
-<td><p>876.77</p></td>
-<td><p><abbr title="CellExecutionError">❌</abbr></p></td>
+<td><p>905.35</p></td>
+<td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="legacy_tutorials/data_preprocessing.html"><span class="doc">legacy_tutorials/data_preprocessing</span></a></p></td>
-<td><p>2024-04-15 14:13</p></td>
+<td><p>2024-04-15 17:43</p></td>
 <td><p>cache</p></td>
-<td><p>19.04</p></td>
+<td><p>18.43</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="legacy_tutorials/data_visualization.html"><span class="doc">legacy_tutorials/data_visualization</span></a></p></td>
-<td><p>2024-04-15 14:14</p></td>
+<td><p>2024-04-15 17:44</p></td>
 <td><p>cache</p></td>
-<td><p>48.61</p></td>
+<td><p>49.83</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="tutorials/NRR/NRR_example.html"><span class="doc">tutorials/NRR/NRR_example</span></a></p></td>
-<td><p>2024-04-15 14:27</p></td>
+<td><p>2024-04-15 17:55</p></td>
 <td><p>cache</p></td>
-<td><p>784.87</p></td>
+<td><p>693.28</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="tutorials/OCP-introduction.html"><span class="doc">tutorials/OCP-introduction</span></a></p></td>
-<td><p>2024-04-15 14:31</p></td>
+<td><p>2024-04-15 17:59</p></td>
 <td><p>cache</p></td>
-<td><p>252.57</p></td>
+<td><p>256.11</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="tutorials/adsorbml_walkthrough.html"><span class="doc">tutorials/adsorbml_walkthrough</span></a></p></td>
-<td><p>2024-04-15 14:38</p></td>
+<td><p>2024-04-15 18:07</p></td>
 <td><p>cache</p></td>
-<td><p>424.56</p></td>
+<td><p>465.08</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="tutorials/advanced/embeddings.html"><span class="doc">tutorials/advanced/embeddings</span></a></p></td>
-<td><p>2024-04-15 14:40</p></td>
+<td><p>2024-04-15 18:09</p></td>
 <td><p>cache</p></td>
-<td><p>86.8</p></td>
+<td><p>86.43</p></td>
 <td><p>✅</p></td>
 </tr>
 <tr class="row-odd"><td><p><a class="xref doc reference internal" href="tutorials/advanced/fine-tuning-in-python.html"><span class="doc">tutorials/advanced/fine-tuning-in-python</span></a></p></td>
-<td><p>2024-04-15 14:40</p></td>
+<td><p>2024-04-15 18:29</p></td>
 <td><p>cache</p></td>
-<td><p>33.88</p></td>
-<td><p><abbr title="CellExecutionError">❌</abbr></p></td>
+<td><p>1214.44</p></td>
+<td><p><abbr title="CellTimeoutError">❌</abbr></p></td>
 </tr>
 <tr class="row-even"><td><p><a class="xref doc reference internal" href="tutorials/intro.html"><span class="doc">tutorials/intro</span></a></p></td>
-<td><p>2024-04-15 14:40</p></td>
+<td><p>2024-04-15 18:29</p></td>
 <td><p>cache</p></td>
-<td><p>4.32</p></td>
+<td><p>4.9</p></td>
 <td><p>✅</p></td>
 </tr>
 </tbody>
