deploy: 27d812ef7fea0e2abdc6a8c2eaddd628d9ce399a

--- a/genindex.html
+++ b/genindex.html
@@ -771,8 +771,16 @@ document.write(`
         <li><a href="autoapi/ocpapi/index.html#ocpapi.Status.__str__">(ocpapi.Status method)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/core/index.html#core.__version__">__version__ (in module core)</a>
+      <li><a href="autoapi/cattsunami/index.html#cattsunami.__version__">__version__ (in module cattsunami)</a>
+
+      <ul>
+        <li><a href="autoapi/core/index.html#core.__version__">(in module core)</a>
 </li>
+        <li><a href="autoapi/data/oc/index.html#data.oc.__version__">(in module data.oc)</a>
+</li>
+        <li><a href="autoapi/ocpapi/index.html#ocpapi.__version__">(in module ocpapi)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/ocpapi/client/ui/index.html#ocpapi.client.ui._API_TO_UI_HOSTS">_API_TO_UI_HOSTS (in module ocpapi.client.ui)</a>
 </li>
       <li><a href="autoapi/core/models/equiformer_v2/equiformer_v2_oc20/index.html#core.models.equiformer_v2.equiformer_v2_oc20._AVG_DEGREE">_AVG_DEGREE (in module core.models.equiformer_v2.equiformer_v2_oc20)</a>
@@ -865,12 +873,12 @@ document.write(`
 </li>
       <li><a href="autoapi/core/common/registry/index.html#core.common.registry._get_absolute_mapping">_get_absolute_mapping() (in module core.common.registry)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/ocpapi/workflows/adsorbates/index.html#ocpapi.workflows.adsorbates._get_absorbate_configs_on_slab">_get_absorbate_configs_on_slab() (in module ocpapi.workflows.adsorbates)</a>
 </li>
       <li><a href="autoapi/ocpapi/workflows/adsorbates/index.html#ocpapi.workflows.adsorbates._get_absorbate_configs_on_slab_with_logging">_get_absorbate_configs_on_slab_with_logging() (in module ocpapi.workflows.adsorbates)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/ocpapi/workflows/adsorbates/index.html#ocpapi.workflows.adsorbates._get_adsorbate_configs_on_slabs">_get_adsorbate_configs_on_slabs() (in module ocpapi.workflows.adsorbates)</a>
 </li>
       <li><a href="autoapi/data/oc/core/index.html#data.oc.core.Adsorbate._get_adsorbate_from_random">_get_adsorbate_from_random() (data.oc.core.Adsorbate method)</a>
