deploy: d0f61faeace9eca51bf3a04fdb3cfaece25d5a25

--- a/tutorials/intro.html
+++ b/tutorials/intro.html
@@ -732,9 +732,9 @@ torch geometric: 2.3.0
 
 Platform: Linux-6.5.0-1021-azure-x86_64-with-glibc2.35
   Processor: x86_64
-  Virtual memory: svmem(total=16757354496, available=14380392448, percent=14.2, used=1988120576, free=10071695360, active=1869037568, inactive=4221353984, buffers=171114496, cached=4526424064, shared=25632768, slab=398045184)
-  Swap memory: sswap(total=4294963200, used=6201344, free=4288761856, percent=0.1, sin=20480, sout=5496832)
-  Disk usage: sdiskusage(total=77851254784, used=68608495616, free=9225981952, percent=88.1)
+  Virtual memory: svmem(total=16757354496, available=14366674944, percent=14.3, used=1989398528, free=9917972480, active=2212605952, inactive=4016414720, buffers=177012736, cached=4672970752, shared=25501696, slab=410988544)
+  Swap memory: sswap(total=4294963200, used=1323008, free=4293640192, percent=0.0, sin=12288, sout=618496)
+  Disk usage: sdiskusage(total=77851254784, used=68608614400, free=9225863168, percent=88.1)
 </pre></div>
 </div>
 </div>
