--- a/tutorials/intro.html
+++ b/tutorials/intro.html
@@ -732,9 +732,9 @@ torch geometric: 2.3.0
 
 Platform: Linux-6.5.0-1021-azure-x86_64-with-glibc2.35
   Processor: x86_64
-  Virtual memory: svmem(total=16757354496, available=14366674944, percent=14.3, used=1989398528, free=9917972480, active=2212605952, inactive=4016414720, buffers=177012736, cached=4672970752, shared=25501696, slab=410988544)
-  Swap memory: sswap(total=4294963200, used=1323008, free=4293640192, percent=0.0, sin=12288, sout=618496)
-  Disk usage: sdiskusage(total=77851254784, used=68608614400, free=9225863168, percent=88.1)
+  Virtual memory: svmem(total=16757354496, available=14372110336, percent=14.2, used=1996730368, free=9696882688, active=2359808000, inactive=4082696192, buffers=242098176, cached=4821643264, shared=25317376, slab=414982144)
+  Swap memory: sswap(total=4294963200, used=536576, free=4294426624, percent=0.0, sin=16384, sout=233472)
+  Disk usage: sdiskusage(total=77851254784, used=68608348160, free=9226129408, percent=88.1)
 </pre></div>
 </div>
 </div>
