--- a/tutorials/intro.html
+++ b/tutorials/intro.html
@@ -732,9 +732,9 @@ torch geometric: 2.3.0
 
 Platform: Linux-6.5.0-1021-azure-x86_64-with-glibc2.35
   Processor: x86_64
-  Virtual memory: svmem(total=16757354496, available=14372110336, percent=14.2, used=1996730368, free=9696882688, active=2359808000, inactive=4082696192, buffers=242098176, cached=4821643264, shared=25317376, slab=414982144)
-  Swap memory: sswap(total=4294963200, used=536576, free=4294426624, percent=0.0, sin=16384, sout=233472)
-  Disk usage: sdiskusage(total=77851254784, used=68608348160, free=9226129408, percent=88.1)
+  Virtual memory: svmem(total=16757354496, available=14375645184, percent=14.2, used=1992912896, free=9762832384, active=1949495296, inactive=4415479808, buffers=241147904, cached=4760461312, shared=25600000, slab=427552768)
+  Swap memory: sswap(total=4294963200, used=1060864, free=4293902336, percent=0.0, sin=0, sout=270336)
+  Disk usage: sdiskusage(total=77851254784, used=68608397312, free=9226080256, percent=88.1)
 </pre></div>
 </div>
 </div>
